agrege suscripcion, cambie la cabecera y puse el texto azul

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Arial";
   background: #202020;
   text-align: left;
-  color: aliceblue;
+  color: blue;
   margin: 0;
   padding: 0;
 }
