--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,30 @@ body {
   font-family: "Arial";
   background: #202020;
   text-align: left;
-  color: blue;
+  color: aliceblue;
   margin: 0;
   padding: 0;
 }
-.container{
+.container {
   width: 70%;
-  padding: 1em;
+
   text-align: left;
   border: 1px solid #ddd;
-  margin: 0 auto;  
+  margin: 0 auto;
+}
+#post {
+  padding: 1em;
 }
 .container h1 {
-    font-size: 20px;
+  font-size: 20px;
 }
-#cabecera{
-    background-color: #88f;
-    color: aliceblue;
-    margin:0;
-    padding: .5em ;
+#cabecera {
+  font-weight: bold;
+  text-align: center;
+  font-size: 24px;
+  background-color: #88f;
+  color: aliceblue;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0.5em;
 }
